--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -2,6 +2,7 @@
 @import url("https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap");
 
+
 .cursive {
   font-family: "Roboto Mono", cursive;
   font-weight: 700;
@@ -10,11 +11,5 @@
 .prose img {
   margin-left: auto;
   margin-right: auto;
-  border-radius: 5px; 
-/* turn px to em   */
-}
-
-.home-name {
-  font-size: 150px;
-  /* turn px to em   */
+  border-radius: 0.313rem; 
 }
